# eBPF-Multi-Agent

./: .gitignore  Makefile  PROGRESS.md  README.md  赛题.txt
backend/: go.mod  go.sum
backend/cmd/: main.go
backend/internal/agents/: anomaly_rules.go  detector.go  prompt_parser.go  registry.go
backend/internal/handler/: handler.go  middleware.go  websocket.go
backend/internal/model/: types.go
backend/internal/service/: agent_service.go  alert_service.go  correlator_service.go  ml_service.go  monitor_service.go
demo/: README.md  agent_runner.py  agent_simulator.py  benchmark.py  benchmark_report.json  benchmark_suite.py  common.py  cross_layer.py  live_monitor.py  main.py  main_with_ml.py  ml_classifier.py  ml_classifier_v2.py  ollama_runner.py  pyproject.toml  sandbox.py  sandbox_cli.py  web_dashboard.py
demo/models/: feature_names.json
docs/: 开发指南.md  技术架构.md  项目指南.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: AgentIntegration.vue  AgentTable.vue  AlertList.vue  ControlPanel.vue  EventLog.vue
frontend/src/composables/: useApi.ts  useWebSocket.ts
frontend/src/stores/: dashboard.ts
frontend/src/types/: index.ts
frontend/src/views/: Agents.vue  Alerts.vue  CausalLinks.vue  Dashboard.vue  (+1 more)
include/: common.h  main.skel.h
scripts/: test.sh
src/bpf/: main.bpf.c
src/user/: agent_tracker.c  agent_tracker.h  alert_manager.c  alert_manager.h  anomaly_detector.c  anomaly_detector.h  event_processor.c  event_processor.h  main.c
