[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "textual>=8.2.5",
]
